# scicaml

./: .gitignore  README.md  dune-project  scicaml.opam
lib/: dune
lib/core/: dataset.ml  dune  matrix.ml  vector.ml
lib/linear_model/: dune  linear_regression.ml  logistic_regression.ml
test/: dune  test_data.csv  test_dataset.ml  test_linear_regression.ml  test_logistic_regression.ml  test_matrix.ml  test_vector.ml
