(lang dune 3.16)

(name scicaml)

(generate_opam_files true)

(source
 (github Pineapple-Soup/scicaml))

(authors "Adithya Iyer")

(maintainers "Adithya Iyer")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name scicaml)
 (synopsis "A machine learning library")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
