(test
 (name test_scicaml))

(test
  (name test_vector)
  (libraries ounit2 core)
  (modules test_vector))

 (test
  (name test_matrix)
  (libraries ounit2 core)
  (modules test_matrix))

(test
  (name test_dataset)
  (libraries ounit2 core)
  (modules test_dataset))

(test
  (name test_linear_regression)
  (libraries ounit2 core linear_model)
  (modules test_linear_regression))